--- a/TeduShop.Web/Views/Home/Index.cshtml
+++ b/TeduShop.Web/Views/Home/Index.cshtml
@@ -3,9 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
-@section JavaScriptLayout {
-    <script src="/Assets/client/js/jquery-1.11.0.min.js"></script>
-    <script src="/Assets/client/js/bootstrap.min.js"></script>
+@section JavaScriptLayout {   
     <script src="/Assets/client/js/jquery.cookie.js"></script>
     <script src="/Assets/client/js/waypoints.min.js"></script>
     <script src="/Assets/client/js/modernizr.js"></script>
@@ -27,7 +25,7 @@
                     <div class="item">
                         <a href="@item.URL">
 
-                            <img src="@item.Image" class="img-responsive">
+                            <img src="@item.Image" alt="@item.Name"class="img-responsive">
                             <div id="FirstLetter" style="position:absolute; top:0%; right:5% "><h3><p style="font-style:italic">@item.Content</p></h3></div>
                         </a>
 
@@ -68,18 +66,18 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href="@url">
-                                            <img src="@item.ThumbnailImage" alt="" class="img-responsive">
+                                            <img src="@item.ThumbnailImage" alt="@item.Name" class="img-responsive">
                                         </a>
                                     </div>
 
                                 </div>
                             </div>
                             <a href="#" class="invisible">
-                                <img src="@item.ThumbnailImage" alt="" class="img-responsive">
+                                <img src="@item.ThumbnailImage" alt="@item.Name" class="img-responsive">
                             </a>
                             <div class="text">
                                 <h3><a href="@url">@item.Name</a></h3>
-                                @if (item.PromotionPrice.HasValue)
+                                @if (item.PromotionPrice.HasValue==true)
                                 {
                                     <p class="price"><del>@item.Price</del> @item.PromotionPrice</p>
                                     <div class="ribbon sale">
@@ -89,7 +87,7 @@
                                 }
                                 else
                                 {
-                                    <p class="price">$@item.Price</p>
+                                    <p class="price">@item.Price</p>
                                 }
 
                             </div>
@@ -139,14 +137,14 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href="@url">
-                                            <img src="@item.ThumbnailImage" alt="" class="img-responsive">
+                                            <img src="@item.ThumbnailImage" alt="@item.Name" class="img-responsive">
                                         </a>
                                     </div>
 
                                 </div>
                             </div>
                             <a href="#" class="invisible">
-                                <img src="@item.ThumbnailImage" alt="" class="img-responsive">
+                                <img src="@item.ThumbnailImage" alt="@item.Name" class="img-responsive">
                             </a>
                             <div class="text">
                                 <h3><a href="@url">@item.Name</a></h3>
@@ -176,7 +174,7 @@
     <div class="container" data-animate="fadeInUpBig">
         <div class="col-md-12">
             <div class="box slideshow">
-                <h3>Bài viết</h3>
+                <h3>Blog</h3>
 
                 <div id="get-inspired" class="owl-carousel owl-theme">
                     @foreach (var item in Model.postVm)
@@ -184,7 +182,7 @@
                         var url = "/" + item.Alias + ".blog-" + item.ID + ".html";
                         <div class="item">
                             <a href="@url">
-                                <img src="@item.Image" alt="#" class="img-responsive">
+                                <img src="@item.Image" alt="@item.Name" class="img-responsive">
                                 <div style="position:absolute; top:0%; right:5% "><h3><i style="font-size:18px">@item.Name</i></h3></div>
                             </a>
                         </div>
