--- a/TeduShop.Web/Views/Shared/Header.cshtml
+++ b/TeduShop.Web/Views/Shared/Header.cshtml
@@ -192,10 +192,9 @@ _________________________________________________________ -->
 
             <form class="navbar-form" role="search">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Tìm kiếm">
+                    <input id="keyworks" type="text" class="form-control" placeholder="Tìm kiếm">
                     <span class="input-group-btn">
-
-                        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+                        <button id="btnSearch" type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </span>
                 </div>
             </form>
