--- a/TeduShop.Web/Views/Shared/Header.cshtml
+++ b/TeduShop.Web/Views/Shared/Header.cshtml
@@ -190,9 +190,9 @@ _________________________________________________________ -->
 
         <div class="collapse clearfix" id="search">
 
-            <form class="navbar-form" role="search">
+            <form class="navbar-form" role="search" method="get" action="/search.html">
                 <div class="input-group">
-                    <input id="keyworks" type="text" class="form-control" placeholder="Tìm kiếm">
+                    <input id="keyworks" type="text" name="productName" class="form-control" placeholder="Tìm kiếm">
                     <span class="input-group-btn">
                         <button id="btnSearch" type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </span>
