--- a/TeduShop.Web/Views/Home/Index.cshtml
+++ b/TeduShop.Web/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
                 <div class="col-md-12">
                     <h2>Sản phẩm nổi bật</h2>
                     <p style="text-align:center" class="loadMore">
-                        <a href="#" class="btn btn-primary">Tất cả</a>
+                        <a href="/hotproduct.html" class="btn btn-primary">Tất cả</a>
                     </p>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 
                                 </div>
                             </div>
-                            <a href="#" class="invisible">
+                            <a href="@url" class="invisible">
                                 <img src="@item.ThumbnailImage" alt="@item.Name" class="img-responsive">
                             </a>
                             <div class="text">
@@ -119,7 +119,7 @@
             <div class="col-md-12" style="text-align: center">
                 <h2>Sản phẩm khuyến mãi</h2>
                 <p class="loadMore">
-                    <a href="#" class="btn btn-primary">Tất cả</a>
+                    <a href="promotion-product.html" class="btn btn-primary">Tất cả</a>
                 </p>
             </div>
         </div>
@@ -143,7 +143,7 @@
 
                                 </div>
                             </div>
-                            <a href="#" class="invisible">
+                            <a href="@url" class="invisible">
                                 <img src="@item.ThumbnailImage" alt="@item.Name" class="img-responsive">
                             </a>
                             <div class="text">
