--- a/TeduShop.Web/Views/Product/Index.cshtml
+++ b/TeduShop.Web/Views/Product/Index.cshtml
@@ -25,7 +25,7 @@
 
                 <ul class="breadcrumb">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="/index.html">Home</a>
                     </li>
                     <li>@Category.Name</li>
                 </ul>
@@ -88,7 +88,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a href="#" class="invisible">
+                                    <a href="@url" class="invisible">
                                         <img src="@item.ThumbnailImage" alt="" class="img-responsive">
                                     </a>
                                     <div class="text">
