--- a/TeduShop.Web/Views/Product/HotProduct.cshtml
+++ b/TeduShop.Web/Views/Product/HotProduct.cshtml
@@ -1,15 +1,11 @@
-﻿@model TeduShop.Web.Infrastructure.Core.PaginationClient<TeduShop.Web.Models.ProductViewModel>
+﻿
+@model TeduShop.Web.Infrastructure.Core.PaginationClient<TeduShop.Web.Models.ProductViewModel>
 @{
-    ViewBag.Title = "Tìm kiếm";
-    Layout = "~/Views/Shared/Layouts.cshtml";
-    var sort = (string)ViewBag.Sort;
-    var ProductName = (string)ViewBag.ProductName;
-    var urlSearch = "/search.html?productName=" + ProductName;
+    ViewBag.Title = "Sản phẩm nổi bật";
+    Layout = "~/Views/Shared/Layouts.cshtml"; 
 }
 @section JavaScriptLayout {
     <script src="/Assets/client/js/jquery.cookie.js"></script>
-    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
-    <script src="~/Assets/client/js/Sort.js"></script>
     <script src="/Assets/client/js/waypoints.min.js"></script>
     <script src="/Assets/client/js/modernizr.js"></script>
     <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
@@ -27,49 +23,9 @@
                     <li>
                         <a href="/index.html">Home</a>
                     </li>
-                    <li>Tìm kiếm</li>
+                    <li>Sản phẩm nổi bật</li>
                 </ul>
-
-                <div class="box info-bar">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-12  products-number-sort">
-                            <div class="row">
-                                <form class="form-inline">
-                                    <div class="products-sort-by" style="text-align:right;">
-                                        <strong>Sắp xếp</strong>
-                                        <select id="choiceshort" name="sort-by" class="form-control">
-                                            @if (sort == "lasted")
-                                            {
-                                                <option selected value="@urlSearch&page=1 &sort=lasted">Mới nhất</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="@urlSearch&page=1&sort=lasted">Mới nhất</option>
-                                            }
-                                            @if (sort == "price")
-                                            {
-                                                <option selected value="@urlSearch&page=1 &sort=price"> Giá ---></option>
-                                            }
-                                            else
-                                            {
-                                                <option value="@urlSearch&page=1 &sort=price"> Giá ---></option>
-                                            }
-                                            @if (sort == "promotion")
-                                            {
-                                                <option selected value="@urlSearch&page=1&sort=promotion">Khuyến mãi</option>
-                                            }
-                                            else
-                                            {
-                                                <option value="@urlSearch&page=1&sort=promotion">Khuyến mãi</option>
-                                            }
-
-                                        </select>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+   
 
                 <div id="productSort" class="row products">
                     @if (@Model.Count > 0)
@@ -143,7 +99,7 @@
                             @if (Model.PageIndex > 1)
                             {
                                 <li>
-                                    <a href="@urlSearch&page=@(Model.PageIndex - 1)&sort=@sort">&laquo;</a>
+                                    <a href="?page=@(Model.PageIndex - 1)">&laquo;</a>
                                 </li>
                             }
 
@@ -152,13 +108,13 @@
                                 if (i == Model.PageIndex)
                                 {
                                     <li class="active">
-                                        <a href="@urlSearch&page=@i&sort=@sort">@i</a>
+                                        <a href="?page=@i">@i</a>
                                     </li>
                                 }
                                 else
                                 {
                                     <li>
-                                        <a href="@urlSearch&page=@i&sort=@sort">@i</a>
+                                        <a href="?page=@i">@i</a>
                                     </li>
                                 }
 
@@ -167,7 +123,7 @@
                             @if (Model.PageIndex < Model.TotalPage)
                             {
                                 <li>
-                                    <a href="@urlSearch&page=@(Model.PageIndex + 1)&sort=@sort ">&raquo;</a>
+                                    <a href="?page=@(Model.PageIndex + 1)">&raquo;</a>
                                 </li>
                             }
 
@@ -185,5 +141,6 @@
         <!-- /.container -->
     </div>
     <!-- /#content -->
+
 
 
