--- a/TeduShop.Web/Views/Shared/Header.cshtml
+++ b/TeduShop.Web/Views/Shared/Header.cshtml
@@ -12,7 +12,7 @@
                     <a href="register.html">Đăng ký</a>
                 </li>
                 <li>
-                    <a href="contact.html">Liên hệ</a>
+                    <a href="/contact.html">Liên hệ</a>
                 </li>
             </ul>
         </div>
@@ -79,7 +79,7 @@ _________________________________________________________ -->
 
             <ul class="nav navbar-nav navbar-left">
                 <li class="active">
-                    <a href="index.html">Trang chủ</a>
+                    <a href="/index.html">Trang chủ</a>
                 </li>
 
                 @foreach (var item in Model.productCategoryVm.Where(x => x.ParentID == null))
