--- a/TeduShop.Web/Views/Shared/Layouts.cshtml
+++ b/TeduShop.Web/Views/Shared/Layouts.cshtml
@@ -32,7 +32,7 @@
 
     <!-- your stylesheet with modifications -->
     <link href="/Assets/client/css/custom.css" rel="stylesheet">
-
+    <link href="~/Assets/client/css/customerRe.css" rel="stylesheet" />
     <script src="/Assets/client/js/respond.min.js"></script>
 
     <link rel="shortcut icon" href="favicon.png">
