--- a/TeduShop.Web/Views/Shared/Layouts.cshtml
+++ b/TeduShop.Web/Views/Shared/Layouts.cshtml
@@ -68,6 +68,7 @@
     _________________________________________________________ -->
     <script src="/Assets/client/js/jquery-1.11.0.min.js"></script>
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    <script src="~/Scripts/mustache.js"></script>
     <script src="/Assets/client/js/bootstrap.min.js"></script>
 
     <script src="~/Assets/client/js/common.js"></script>
