--- a/TeduShop.Web/Views/Product/Detail.cshtml
+++ b/TeduShop.Web/Views/Product/Detail.cshtml
@@ -11,6 +11,7 @@
     <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
     <script src="/Assets/client/js/owl.carousel.min.js"></script>
     <script src="/Assets/client/js/front.js"></script>
+    <script src="~/Assets/client/js/shoppingCart.js"></script>
 }
 <div id="all">
     <div id="content">
@@ -45,7 +46,7 @@
                                     Tag:
                                     @foreach (var tagitem in productTags)
                                     {
-                                        var url = "/tag-" + tagitem.ID+".html";
+                                        var url = "/tag-" + tagitem.ID + ".html";
                                         <a style="color:black" href="@url">@tagitem.Name ;</a>
                                     }
                                 </p>
@@ -63,7 +64,7 @@
                             }
 
                             <p class="text-center buttons">
-                                <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Mua hàng</a>
+                                <a href="#" class="btn btn-primary btnshoppingCart"  data-id="@Model.ProductVm.ID"><i class="fa fa-shopping-cart"></i>Mua hàng</a>
                             </p>
                         </div>
                     </div>
