--- a/TeduShop.Web/Views/Product/HotProduct.cshtml
+++ b/TeduShop.Web/Views/Product/HotProduct.cshtml
@@ -2,10 +2,11 @@
 @model TeduShop.Web.Infrastructure.Core.PaginationClient<TeduShop.Web.Models.ProductViewModel>
 @{
     ViewBag.Title = "Sản phẩm nổi bật";
-    Layout = "~/Views/Shared/Layouts.cshtml"; 
+    Layout = "~/Views/Shared/Layouts.cshtml";
 }
 @section JavaScriptLayout {
     <script src="/Assets/client/js/jquery.cookie.js"></script>
+    <script src="~/Assets/client/js/shoppingCart.js"></script>
     <script src="/Assets/client/js/waypoints.min.js"></script>
     <script src="/Assets/client/js/modernizr.js"></script>
     <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
@@ -25,7 +26,7 @@
                     </li>
                     <li>Sản phẩm nổi bật</li>
                 </ul>
-   
+
 
                 <div id="productSort" class="row products">
                     @if (@Model.Count > 0)
@@ -60,7 +61,7 @@
 
                                         <p class="buttons">
                                             <a href="@url" class="btn btn-default">Chi tiết</a>
-                                            <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Mua</a>
+                                            <a href="#"  data-id="@item.ID" class="btn btn-primary btnshoppingCart"><i class="fa fa-shopping-cart"></i>Mua</a>
                                         </p>
                                     </div>
                                     <!-- /.text -->
