--- a/TeduShop.Web/Views/Product/Tag.cshtml
+++ b/TeduShop.Web/Views/Product/Tag.cshtml
@@ -8,6 +8,7 @@
 }
 @section JavaScriptLayout {
     <script src="/Assets/client/js/jquery.cookie.js"></script>
+    <script src="~/Assets/client/js/shoppingCart.js"></script>
     <script src="/Assets/client/js/waypoints.min.js"></script>
     <script src="/Assets/client/js/modernizr.js"></script>
     <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
@@ -62,7 +63,7 @@
 
                                         <p class="buttons">
                                             <a href="@url" class="btn btn-default">Chi tiết</a>
-                                            <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Mua</a>
+                                            <a href="#"  data-id="@item.ID" class="btn btn-primary btnshoppingCart"><i class="fa fa-shopping-cart"></i>Mua</a>
                                         </p>
                                     </div>
                                     <!-- /.text -->
