--- a/TeduShop.Web/Views/ShoppingCart/Index.cshtml
+++ b/TeduShop.Web/Views/ShoppingCart/Index.cshtml
@@ -50,13 +50,19 @@
                                 </tr>
                             </thead>
                             <tbody id="shopingContent"></tbody>
+                            <tfoot>
+                                <tr>
+                                    <th colspan="6" class="text-right">Tổng tiền:</th>
+                                    <th id="totalPriceShopping"></th>
+                                </tr>                              
+                            </tfoot>
                         </table>
 
                     </div>
                     <!-- /.table-responsive -->
                     <div class="box-footer">
                         <div class="pull-left">
-                            <a href="category.html" class="btn btn-default"><i class="fa fa-chevron-left"></i>Tiếp tục mua</a>
+                            <a href='javascript:history.go(-1)' class="btn btn-default"><i class="fa fa-chevron-left"></i>Tiếp tục mua</a>
                         </div>
                         <div class="pull-right">
                             <button class="btn btn-default"><i class="fa fa-refresh"></i> Cập nhật giỏ hàng</button>
@@ -81,11 +87,11 @@
             <td>
                 {{Name}}
             </td>
-            <td><input type="number" data-id="{{ProductId}}" value="{{Quantity}}" class="form-control" /></td>
-            <td>{{Price}}</td>
+            <td><input type="number" data-price="{{salePrice}}"  data-id="{{ProductId}}" value="{{Quantity}}" class="form-control txtKeyupQuantity" /></td>
+            <td>{{PriceF}}</td>
             <td>{{PromotionPrice}}</td>
-            <td>{{Amount}}</td>
-            <td><button type="submit" class="btn btn-danger"><i class="fa fa-trash-o"></i></button></td>
+            <td id="amount_{{ProductId}}">{{Amount}}</td>
+            <td><button data-id="{{ProductId}}" class="btn btn-danger btnDeleteItemShoppingCart"><i class="fa fa-trash-o"></i></button></td>
         </tr>
     </script>
 
