--- a/TeduShop.Web/Views/Product/HotProduct.cshtml
+++ b/TeduShop.Web/Views/Product/HotProduct.cshtml
@@ -6,7 +6,6 @@
 }
 @section JavaScriptLayout {
     <script src="/Assets/client/js/jquery.cookie.js"></script>
-    <script src="~/Assets/client/js/shoppingCart.js"></script>
     <script src="/Assets/client/js/waypoints.min.js"></script>
     <script src="/Assets/client/js/modernizr.js"></script>
     <script src="/Assets/client/js/bootstrap-hover-dropdown.js"></script>
@@ -59,10 +58,7 @@
                                             <p class="price">@item.Price</p>
                                         }
 
-                                        <p class="buttons">
-                                            <a href="@url" class="btn btn-default">Chi tiết</a>
-                                            <a href="#"  data-id="@item.ID" class="btn btn-primary btnshoppingCart"><i class="fa fa-shopping-cart"></i>Mua</a>
-                                        </p>
+
                                     </div>
                                     <!-- /.text -->
                                     @if (item.PromotionPrice.HasValue == true)
@@ -142,6 +138,7 @@
         <!-- /.container -->
     </div>
     <!-- /#content -->
+    </div>
 
 
 
