--- a/TeduShop.Web/Views/ShoppingCart/Index.cshtml
+++ b/TeduShop.Web/Views/ShoppingCart/Index.cshtml
@@ -14,84 +14,87 @@
     <script src="~/Assets/client/js/shoppingCart.js"></script>
 }
 
-<div id="all">
+    <div id="all">
 
-    <div id="content">
-        <div class="container">
+        <div id="content">
+            <div class="container">
 
-            <div class="col-md-12">
+                <div class="col-md-12">
 
-                <ul class="breadcrumb">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
+                    <ul class="breadcrumb">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
 
-                    <li>Giỏ hàng</li>
+                        <li>Giỏ hàng</li>
 
-                </ul>
-
-            </div>
-
-
-            <div class="col-md-12" id="customer-order">
-                <div class="box">
-                    <h1>Giỏ hàng</h1>
-                    <hr>
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th colspan="2">Sản phẩm</th>
-                                    <th>Số lượng</th>
-                                    <th>Giá</th>
-                                    <th>Giá khuyến mãi</th>
-                                    <th>Tổng tiền</th>
-                                    <th>#</th>
-                                </tr>
-                            </thead>
-                            <tbody id="shopingContent"></tbody>
-                            <tfoot>
-                                <tr>
-                                    <th colspan="6" class="text-right">Tổng tiền:</th>
-                                    <th id="totalPriceShopping"></th>
-                                </tr>                              
-                            </tfoot>
-                        </table>
-
-                    </div>
-                    <!-- /.table-responsive -->
-                    <div class="box-footer">
-                        <div class="pull-left">
-                            <a href='javascript:history.go(-1)' class="btn btn-default"><i class="fa fa-chevron-left"></i>Tiếp tục mua</a>
-                        </div>
-                        <div class="pull-right">
-                            <button class="btn btn-default"><i class="fa fa-refresh"></i> Cập nhật giỏ hàng</button>
-                            <button type="submit" class="btn btn-primary">
-                                Thanh toán <i class="fa fa-chevron-right"></i>
-                            </button>
-                        </div>
-                    </div>
+                    </ul>
 
                 </div>
+
+
+                <div class="col-md-12" id="customer-order">
+                    <div class="box">
+                        <h1>Giỏ hàng</h1>
+                        <hr>
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th colspan="2">Sản phẩm</th>
+                                        <th>Size</th>
+                                        <th>Số lượng</th>
+                                        <th>Giá</th>
+                                        <th>Giá khuyến mãi</th>
+                                        <th>Tổng tiền</th>
+                                        <th>#</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="shopingContent"></tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th colspan="7" class="text-right">Tổng tiền:</th>
+                                        <th id="totalPriceShopping"></th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+
+                        </div>
+                        <!-- /.table-responsive -->
+                        <div class="box-footer">
+                            <div class="pull-left">
+                                <a href='javascript:history.go(-2)' class="btn btn-default"><i class="fa fa-chevron-left"></i>Tiếp tục mua</a>
+                            </div>
+                            <div class="pull-right">
+                                <button type="submit" class="btn btn-primary">
+                                    Thanh toán <i class="fa fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
-
+            <!-- /.container -->
         </div>
-        <!-- /.container -->
-    </div>
 
-    <script id="tmpShoppingContent" type="x-tmpl-mustache">
-        <tr>
-            <td>
-                <img src="{{Image}}" alt="{{Name}}">
-            </td>
-            <td>
-                {{Name}}
-            </td>
-            <td><input type="number" data-price="{{salePrice}}"  data-id="{{ProductId}}" value="{{Quantity}}" class="form-control txtKeyupQuantity" /></td>
-            <td>{{PriceF}}</td>
-            <td>{{PromotionPrice}}</td>
-            <td id="amount_{{ProductId}}">{{Amount}}</td>
-            <td><button data-id="{{ProductId}}" class="btn btn-danger btnDeleteItemShoppingCart"><i class="fa fa-trash-o"></i></button></td>
-        </tr>
-    </script>
+        <script id="tmpShoppingContent" type="x-tmpl-mustache">
+            <tr>
+                <td>
+                    <img src="{{Image}}" alt="{{Name}}">
+                </td>
+                <td>
+                    {{Name}}
+                </td>
+                <td><input type="text" data-id="{{ProductId}}" value="{{Size}}" class="form-control txtSizeShopping" /></td>               
+                <td><input type="number" data-size="{{Size}}" data-price="{{salePrice}}" data-id="{{ProductId}}" value="{{Quantity}}" class="form-control txtKeyupQuantity" /></td>
+                <td>{{PriceF}}</td>
+                <td>{{PromotionPrice}}</td>
+                <td id="amount_{{ProductId}}_{{Size}}">{{Amount}}</td>
+                <td><button data-size="{{Size}}" data-id="{{ProductId}}" class="btn btn-danger btnDeleteItemShoppingCart"><i class="fa fa-trash-o"></i></button></td>
+            </tr>
+        </script>
+
+       
 
